--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://kamisia.github.io/task-manager-app",
+  "homepage": "https://kamisia.github.io/task-manager-app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "vite build --base=/task-manager-app",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
