--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "backend": "file:",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
